examples/test/testpolicy9858.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9858
  namespace: namespace311
spec:
  podSelector:
    matchLabels:
      key2: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value11
          key49: value24
          key7: value10
      podSelector:
        matchLabels:
          key24: value13
          key25: value8
          key45: value11
